# Shop_doors_on_django

./: README.md
prod/: db.sqlite3  pyproject.toml
prod/demo/: admin.py  models.py  urls.py  views.py
prod/demo/static/css/: main.css
prod/prod/: settings.py  urls.py
prod/templates/: index.html
prod/templates/demo/: about.html  contact.html
