[tool.poetry]
name = "store-doors"
version = "0.1.0"
description = ""
authors = ["Dev-cmyser <cmyser.fast@mail.ru>"]
readme = "README.md"
packages = [{include = "store_doors"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^9.4.0"
django = "^4.1.7"
djlint = "^1.19.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
